<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <action
        android:id="@+id/action_global_slot"
        app:destination="@id/slotFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/homeFragment" />

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.vslot.app.ui.splash.SplashFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_splash_to_disclaimer"
            app:destination="@id/disclaimerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/disclaimerFragment"
        android:name="com.vslot.app.ui.disclaimer.DisclaimerFragment"
        android:label="@string/disclaimer_title">
        <action
            android:id="@+id/action_disclaimer_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/disclaimerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.vslot.app.ui.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_home_to_slot"
            app:destination="@id/slotFragment" />
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_home_to_privacy"
            app:destination="@id/privacyFragment" />
    </fragment>

    <fragment
        android:id="@+id/slotFragment"
        android:name="com.vslot.app.ui.slot.SlotFragment"
        android:label="@string/app_name">
        <argument
            android:name="slotId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.vslot.app.ui.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settings_to_privacy"
            app:destination="@id/privacyFragment" />
    </fragment>

    <fragment
        android:id="@+id/privacyFragment"
        android:name="com.vslot.app.ui.privacy.PrivacyFragment"
        android:label="@string/privacy_policy" />
</navigation>
